[tool.poetry]
name = "cache_invalidator"
version = "0.1.0"
description = "A Django project for smart cache invalidation"
authors = ["Thomas Pennant pennqo@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
celery = "^5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"